css/post.css
.post-container {
  counter-reset: footnotes;
  position: relative;
}

.post__container blockquote {
  margin: 1rem;
  quotes: "\201C""\201D""\2018""\2019";
  display: flex;
  align-items: baseline;
}

.post__container p {
  font-family: et-book, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.post__container span,
.post__container div
 {
  font-family: inherit;
}

.post__container blockquote:after {
  content: no-close-quote;
}

.post__container blockquote:before {
  /* display: inline; */
  color: #ccc;
  content: open-quote;
  font-size: 4rem;
  line-height: 0.1em;
  margin-right: 0.1em;
  vertical-align: -0.4em;
  font-family: Georgia, Helvetica, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.post__container blockquote p {
  display: inline;
}

.post__container [role="doc-noteref"] {
  text-decoration: none;
  color: var(--navy);
}

.post__container [role="doc-noteref"]::after {
  counter-increment: footnotes;
  content: "[" counter(footnotes) "]";
  vertical-align: super;
  font-size: 1rem;
  text-decoration: underline;
}

.post__container .direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: 0.1em;
}

.post__content a,
.post__container a {
  text-decoration: none;
  border-bottom: 2px dotted var(--oceanblue);
  color: var(--navy);
  font-family: et-book, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.post__content a:hover,
.post__container a:hover {
  border-bottom: 2px solid var(--oceanblue);
}

.post__content table {
  margin: 1em 0;
}

.post__content table td,
.post__content table th {
  padding-right: 1em;
}

/* injected from `note` paired short code */
.post__note {
  background: var(--oceanblue);
  color: white;
  padding: 15px;
  margin: 25px 0;
  border-radius: 5px;
  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -2px rgb(0 0 0 / 5%);
}

.post__note a {
  text-decoration: none;
  border-bottom: 2px dotted white;
  color: white;
}


.post__note a:hover {
  border-bottom: 2px solid white;
}

.post__note p:last-child {
  margin: 0;
}

.post__read-more--list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.post__read-more--container {
  margin: 20px 0;
  border: 2px solid var(--oceanblue);
  padding: 1rem;
}

.post__read-more--container h2,
.post__twitter-share-text h2 {
  margin: 0 0 10px 0;
}

.post__twitter-share-text {
  padding: 1rem;
  border: 2px dotted var(--navy);
}

.post__content article h2 {
  font-size: 1.8rem;
}

.post__content--share-action-button {
  cursor: pointer;
  background: var(--oceanblue);
  position: fixed;
  width: 50px;
  height: 50px;
  right: 25px;
  bottom: 60px;
  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14),
    0 1px 10px 0 rgba(0, 0, 0, 0.12);
  border-radius: 50%;
  padding: 15px;
}

@media only screen and (min-device-width: 768px) {
  .post__content--share-action-button {
    right: 100px;
    bottom: 80px;
    width: 70px;
    height: 70px;
  }
}

